--- a/views/store.ejs
+++ b/views/store.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ajit's Garage | Store</title>
+        <title>Ayan's Garage | Store</title>
         <meta name="description" content="This is the description">
         <link rel="stylesheet" href="styles.css" />
         <script src="https://checkout.stripe.com/checkout.js" defer></script>
@@ -19,7 +19,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
             </nav>
-            <h1 class="store-name store-name-large">Ajit's Garage</h1>
+            <h1 class="store-name store-name-large">Ayan's Garage</h1>
         </header>
         <section class="container content-section">
             <h2 class="section-header">PRODUCTS</h2>
@@ -68,7 +68,7 @@
         </section>
         <footer class="main-footer">
             <div class="container main-footer-container">
-                <h3 class="store-name">Ajit's Garage</h3>
+                <h3 class="store-name">Ayan's Garage</h3>
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.youtube.com" target="_blank">
